fixed overflow on mobile

--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,7 @@
+html,body{
+    overflow-x: hidden;
+}
+
 .img-round {
     border-radius: 75%;
     max-width: 400px;
